--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Samuel Degen | Theoretical Physics at UCLA</title>
+  <meta name="title" content="Samuel Degen | Theoretical Physics at UCLA" />
+  <meta name="description" content="Samuel Degen is a UCLA physics student advancing research at the intersection of quantum field theory, gravity, and nuclear physics. His work uses powerful modern tools from particle physics to improve theoretical predictions for next-generation experiments in gravitational waves and ultracold atoms. Select fellowships and international research opportunities highlight his potential as a future global scholar and a communicator who helps disseminate scientific advances across borders." />
+  <meta name="keywords" content="Samuel Degen, Sam Degen, samdegen, UCLA physics, theoretical physics, quantum field theory, effective field theory, gravitational waves, nuclear physics, renormalization group, many-body theory, student researcher, future professor, academic portfolio, UCLA Department of Physics and Astronomy" />
+  <link rel="canonical" href="https://samdegen.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://samdegen.com/" />
+  <meta property="og:title" content="Samuel Degen | Theoretical Physics at UCLA" />
+  <meta property="og:description" content="Physics student focusing on effective field theory and its connections to gravitational waves and nuclear matter. Recognized through competitive fellowships and international research opportunities that signal promise as a global contributor and communicator." />
+  <meta property="og:image" content="https://samdegen.com/images/degen_headshot-min.JPG" />
+  <meta name="author" content="Samuel Degen" />
+  <meta name="robots" content="index, follow" />
   <link rel="icon" href="images/favicon/physics_characters_circle.png" type="image/png" />
-  <title>Samuel Degen</title>
+  <link rel="apple-touch-icon" href="images/favicon/physics_characters_circle.png" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Samuel Degen",
+      "alternateName": "Sam Degen",
+      "url": "https://samdegen.com/",
+      "image": "https://samdegen.com/images/degen_headshot-min.JPG",
+      "jobTitle": "Physics Student",
+      "affiliation": {
+        "@type": "Organization",
+        "name": "UCLA Department of Physics & Astronomy"
+      },
+      "description": "UCLA physics student studying how effective field theory can connect quantum field theory with gravitational waves and nuclear physics; recognized through competitive fellowships and international research opportunities that underscore potential as a future global scholar and science communicator."
+    }
+  </script>
   <style>
     /* THEME TOKENS */
     html { scroll-behavior: smooth; }
@@ -393,89 +421,4 @@
   const fragRight = document.createDocumentFragment();
   originals.forEach(s => fragLeft.appendChild(s.cloneNode(true)));
   originals.forEach(s => fragRight.appendChild(s.cloneNode(true)));
-  track.insertBefore(fragLeft, track.firstChild);
-  track.appendChild(fragRight);
-
-  let slides = Array.from(track.children);
-  let index = N; // start on the first slide of the middle block
-  let autoTimer = null;
-  let isAnimating = false;
-
-  function slideOffset(i){
-    const s = slides[i];
-    const styles = getComputedStyle(viewport);
-    const padL = parseFloat(styles.paddingLeft) || 0;
-    const padR = parseFloat(styles.paddingRight) || 0;
-    const vpW = viewport.clientWidth;
-    const sW = s.clientWidth;
-    const left = s.offsetLeft;
-
-    // Identify the first/last real slide within the middle block
-    const isFirstReal = (i === N);
-    const isLastReal  = (i === 2*N - 1);
-
-    // Edge behavior: hide outside neighbor at the ends
-    if (isFirstReal) {
-      // Align left edge of the first real slide with the viewport's left padding
-      return left - padL;
-    }
-    if (isLastReal) {
-      // Align right edge of the last real slide with the viewport's right padding
-      return (left + sW) - (vpW - padR);
-    }
-
-    // Middle slides: perfectly center so both left and right previews are visible
-    return left - (vpW - sW)/2;
-  }
-  function setActive(i){ slides.forEach((el, k) => el.classList.toggle('active', k === i)); }
-  function centerOn(i, animate=true){
-    if(!animate){ track.classList.add('no-anim'); }
-    else { track.classList.remove('no-anim'); isAnimating = true; }
-    const left = slideOffset(i);
-    track.style.transform = `translate3d(${-left}px,0,0)`;
-    setActive(i);
-    if(!animate){ requestAnimationFrame(()=> track.classList.remove('no-anim')); }
-  }
-
-  function prewrap(target){
-    if (target >= 2*N) { // jumped past right edge — snap back by N before animating
-      index = target - N;
-      centerOn(index, false);
-      return index;
-    } else if (target < N) { // jumped past left edge — snap forward by N before animating
-      index = target + N;
-      centerOn(index, false);
-      return index;
-    }
-    return target;
-  }
-
-  function go(delta){
-    if (isAnimating) return;
-    let target = index + delta;
-    target = prewrap(target); // ensure we are in the middle block before animating
-    index = target;
-    centerOn(index, true);
-  }
-
-  function startAuto(){ stopAuto(); autoTimer = setInterval(()=> go(1), 5000); }
-  function stopAuto(){ if (autoTimer){ clearInterval(autoTimer); autoTimer=null; } }
-  function restartAuto(){ stopAuto(); startAuto(); }
-
-  window.addEventListener('load', () => { slides = Array.from(track.children); centerOn(index, false); startAuto(); });
-  window.addEventListener('resize', () => centerOn(index, false));
-
-  track.addEventListener('transitionend', (e)=>{ if (e.target !== track || e.propertyName !== 'transform') return; isAnimating = false; });
-
-  // Controls — keep autoscroll running after clicks
-  prevBtn.addEventListener('click', () => { go(-1); restartAuto(); });
-  nextBtn.addEventListener('click', () => { go(1); restartAuto(); });
-
-  // Touch swipe handling
-  let sx=0, sy=0, st=0;
-  viewport.addEventListener('touchstart', e=>{ if(!e.touches[0]) return; sx=e.touches[0].clientX; sy=e.touches[0].clientY; st=Date.now(); stopAuto(); }, {passive:true});
-  viewport.addEventListener('touchend', e=>{ const dx=(e.changedTouches[0]?.clientX||0)-sx; const dy=(e.changedTouches[0]?.clientY||0)-sy; const dt=Date.now()-st; const horiz = Math.abs(dx)>Math.abs(dy) && Math.abs(dx)>30 && dt<600; if(horiz){ go(dx<0?1:-1); } restartAuto(); }, {passive:true});
-</script>
-
-</body>
-</html>
+  track.insertBefore(fr
