--- a/index.html
+++ b/index.html
@@ -275,10 +275,14 @@
     <h2>Honors &amp; Awards</h2>
     <h3>2025</h3>
     <ul>
-      <li><strong>UCLA Undergraduate Research Scholars Program (URSP)</strong> — year-long research scholarship (2025 - 2026)</li> <!-- supporting proposed work on gravitational wave scattering with Mikhail Solon (2025 - 2026)</li> -->
-      <li><strong>Mani L. Bhaumik Institute for Theoretical Physics Summer Research Fellowship</strong> — First undergraduate offered a summer research fellowship at UCLA’s Bhaumik Institute for Theoretical Physics (August 2025)</li>
-      <li><strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded research and culture program; <strong>FUTI Global Leadership Award</strong> recipient (June 2025)</li>
-      <li><strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in Quebec (May 2025)</li>
+      <li><strong>APS Steven Chu Award for Best Undergraduate Research (1st)</strong> — first place prize among all undergraduate research presented at the 2025 meeting of the APS Far West Section (includes CA, NV, HI) (<em>October 2025</em>)</li> 
+      <li><strong>UCLA Undergraduate Research Scholars Program (URSP)</strong> — year-long research scholarship (<em>2025 - 2026</em>)</li> <!-- supporting proposed work on gravitational wave scattering with Mikhail Solon (2025 - 2026)</li> -->
+      <li><strong>Mani L. Bhaumik Institute for Theoretical Physics Summer Research Fellowship</strong> — First undergraduate offered a summer research fellowship at UCLA’s Bhaumik Institute for Theoretical Physics (<em>August 2025</em>)</li>
+      <li><strong>University of Tokyo Research Internship Program (UTRIP)</strong> — 1 of 14 selected from 1,149 applicants for in-person, fully funded research and culture program (<em>June 2025</em>)</li>
+      <ul>
+        <li><strong>FUTI Global Leadership Award</strong> — 1 of 2 UTRIP students</li>
+      </ul>
+      <li><strong>Perimeter Institute’s PSI START Satellite Program</strong> — 1 of 3 international students selected for in-person, fully funded 2-week program in Quebec (<em>May 2025</em>)</li>
     </ul>
     <h3>2024</h3>
     <ul>
@@ -320,7 +324,7 @@
       <li>“<strong>Benchmarking FRG-DFT with the One-Dimensional Fermi Gas – Towards a Nonperturbative Many-Body Nuclear Theory</strong>”
         <ul>
           <li>UTRIP Final Presentation, The University of Tokyo, Tokyo, Japan (August 5, 2025)</li>
-          <li><a href="https://meetings.aps.org/Meeting/FWS25/Session/L04.5">APS Far West Section</a>, UC Santa Cruz (October 11, 2025)</li>
+          <li><a href="https://meetings.aps.org/Meeting/FWS25/Session/L04.5">APS Far West Section</a>, UC Santa Cruz <span style="color: rgb(255, 85, 85);">(Steven Chu Award, 1st)</span> (October 11, 2025)</li>
         </ul>
       </li>
       <li>“<strong>Data-driven statistical model of nonthermal particle acceleration by the kink instability in relativistic jets</strong>”
@@ -339,8 +343,10 @@
   <section id="meetings">
     <h2>Meetings Attended</h2>
     <ul>
+      <li><strong>APS Global Physics Summit 2026</strong> — Denver, Colorado (planned March 2025)</li>
+      <li><strong>GWSky Kick-off Meeting</strong> — Max Planck Institute for Gravitational Physics (Albert Einstein Institute–AEI), Potsdam, Germany (planned December 2025)</li>
       <li><strong>California Amplitudes Meeting 2025 (LA)</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (November 2025)</li>
-      <li><strong>2025 Annual Meeting of the APS Far West Section</strong> — UC Santa Cruz (October 2025)</li>
+      <li><strong>2025 Annual Meeting of the APS Far West Section</strong> — UC Santa Cruz <span style="color: rgb(255, 85, 85);">(Steven Chu Award, 1st)</span> (October 2025)</li>
       <li><strong>2025 Southern California Strings</strong> — Mani L. Bhaumik Institute for Theoretical Physics, UCLA (October 2025)</li>
       <li><strong>California Amplitudes Meeting 2025 (Davis)</strong> — Center for Quantum Mathematics and Physics (QMAP), UC Davis (May 2025)</li>
       <li><strong>66th Annual Meeting of the APS Division of Plasma Physics</strong> — Atlanta, Georgia (October 2024)</li>
@@ -351,8 +357,9 @@
     <h2>Service &amp; Outreach</h2>
     <h3>Interviews &amp; Press</h3>
     <ul>
-      <li><strong><a href="https://www.ubishops.ca/samuel-degen-perimeter-at-b-u/">Perimeter Institute’s PSI START Satellite Interview</a></strong> (May 2025)</li>
+      <li><strong>APS Steven Chu Award for Best Undergraduate Research</strong> (upcoming)</li>
       <li><strong>FUTI Global Leadership Award</strong> (upcoming)</li>
+      <li><strong><a href="https://www.ubishops.ca/samuel-degen-perimeter-at-b-u/">Perimeter Institute’s PSI START Satellite Interview</a></strong> (May 2025)</li>
     </ul>
     <h3>Activities</h3>
     <ul>
